--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ function toggleMenu() {
 <!-- FOOTER -->
 <footer class="footer">
   <div>Pakistan Railways Sukkur Division</div>
-  <div>Developer &amp; Powered by IT Dept: Sukkur Division</div>
+  <div>Developed &amp; Powered by IT Dept: Sukkur Division</div>
 </footer>
 
 </body>
