--- a/index.html
+++ b/index.html
@@ -162,13 +162,12 @@ main {
   }
 }
   <style>
-/* IMPORTANT LINKS PANEL */
 .important-links {
-  background: #f1f1f1;
-  padding: 10px 5px;
+  background: #e6e6e6;   /* light grey */
+  padding: 12px 5px;
   text-align: center;
+  border-top: 1px solid #ccc;
 }
-
 .links-title {
   font-weight: bold;
   margin-bottom: 8px;
@@ -294,7 +293,6 @@ function toggleMenu() {
 </script>
 <!-- IMPORTANT LINKS PANEL -->
 <div class="important-links">
-  <div class="links-title">Important Links</div>
   <div class="links-row">
     <a href="https://www.railways.gov.pk/" target="_blank">Ministry of Railways</a>
     <a href="https://web.citizenportal.gov.pk/" target="_blank">Pakistan Citizen Portal</a>
