--- a/complaint.html
+++ b/complaint.html
@@ -1,29 +1,113 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Register Complaint</title>
+<title>Register Complaint – Pakistan Railways Sukkur Division</title>
+
+<!-- Font Awesome for WhatsApp Icon -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
 <style>
-body { font-family: Arial; background:#f5f5f5; margin:0; }
-header { background:#2e7d32; color:white; padding:15px; text-align:center; }
-main { padding:20px; max-width:600px; margin:auto; background:white; }
+/* ===== BASIC ===== */
+body {
+  font-family: Arial, sans-serif;
+  background: #f5f5f5;
+  margin: 0;
+}
+
+/* ===== HEADER ===== */
+.main-header {
+  background-color: #2e7d32;
+  color: white;
+  padding: 5px 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header-left img,
+.header-right img {
+  height: 50px;
+}
+
+.header-center {
+  font-size: 22px;
+  font-weight: bold;
+  text-align: center;
+  flex: 1;
+}
+
+.header-left,
+.header-right {
+  width: 60px;
+  text-align: center;
+}
+
+/* ===== NAVIGATION ===== */
+nav {
+  background-color: rgba(0, 0, 50, 0.9);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+nav a {
+  color: white;
+  padding: 12px 20px;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+nav a:hover {
+  background-color: #1a237e;
+}
+
+nav button {
+  display: none;
+  background: none;
+  border: none;
+  color: white;
+  font-size: 28px;
+  cursor: pointer;
+}
+
+/* ===== MAIN FORM ===== */
+main {
+  padding: 20px;
+  max-width: 600px;
+  margin: 20px auto;
+  background: white;
+  border-radius: 6px;
+}
+
 input, select, textarea, button {
-  width:100%; padding:10px; margin:8px 0;
+  width: 100%;
+  padding: 10px;
+  margin: 8px 0;
 }
+
 button {
-  background:#2e7d32; color:white; border:none; cursor:pointer;
+  background: #2e7d32;
+  color: white;
+  border: none;
+  cursor: pointer;
 }
-button:hover { opacity:0.9; }
-  /* WhatsApp QR Section */
+
+button:hover {
+  opacity: 0.9;
+}
+
+/* ===== WHATSAPP QR ===== */
 .whatsapp-qr {
-  margin-top: 40px;
+  margin: 40px auto;
   text-align: center;
 }
 
 .qr-title {
   font-size: 18px;
   font-weight: bold;
-  color: #075e54; /* WhatsApp green */
+  color: #075e54;
   margin-bottom: 12px;
 }
 
@@ -35,38 +119,107 @@ button:hover { opacity:0.9; }
 .whatsapp-qr img {
   max-width: 220px;
   width: 100%;
-  height: auto;
 }
 
+/* ===== RESPONSIVE ===== */
+@media (max-width: 768px) {
+  nav {
+    flex-direction: column;
+  }
+
+  nav button {
+    display: block;
+  }
+
+  nav a {
+    display: none;
+  }
+
+  nav a.active {
+    display: block;
+  }
+
+  .header-center {
+    font-size: 18px;
+  }
+}
 </style>
 </head>
+
 <body>
 
-<header>Register Complaint – Pakistan Railways (Sukkur Division)</header>
-<main>
-<form id="complaintForm">
-  <input type="text" id="name" placeholder="Complainant Name" required>
-  <input type="text" id="contact" placeholder="Contact Number" required>
-  
-  <select id="type" required>
-    <option value="">Select Complaint Type</option>
-    <option>Station Facilities</option>
-    <option>Train Delay</option>
-    <option>Staff Behaviour</option>
-    <option>Cleanliness</option>
-    <option>Other</option>
-  </select>
-  
-  <textarea id="message" placeholder="Complaint Details" rows="4" required></textarea>
-  <input type="file" id="image" accept="image/*">
-  <button type="submit">Submit Complaint</button>
-</form>
+<!-- HEADER -->
+<header class="main-header">
+  <div class="header-left">
+    <img src="https://drive.google.com/thumbnail?id=1WptR4123r4Le2CahaXv9khTtmptZvHOn&sz=w80" alt="Pakistan Railways Logo">
+  </div>
 
-<p id="status"></p>
+  <div class="header-center">
+    Pakistan Railways – Sukkur Division
+  </div>
+
+  <div class="header-right">
+    <img src="https://drive.google.com/thumbnail?id=1UD6SmPAI9x-y22oW4CIgrDaItR4MHttx&sz=w150" alt="Division Logo">
+  </div>
+</header>
+
+<!-- MENU -->
+<nav id="menu">
+  <button onclick="toggleMenu()">☰ Menu</button>
+  <a href="index.html">Home</a>
+  <a href="stations.html">Stations</a>
+  <a href="timing.html">Train Timing</a>
+  <a href="ticketing.html">Ticketing</a>
+  <a href="complaint.html"><b>Register Complaint</b></a>
+  <a href="contactus.html">Contact Us</a>
+</nav>
+
+<!-- COMPLAINT FORM -->
+<main>
+  <h3>Register Complaint</h3>
+
+  <form id="complaintForm">
+    <input type="text" id="name" placeholder="Complainant Name" required>
+    <input type="text" id="contact" placeholder="Contact Number" required>
+
+    <select id="type" required>
+      <option value="">Select Complaint Type</option>
+      <option>Station Facilities</option>
+      <option>Train Delay</option>
+      <option>Staff Behaviour</option>
+      <option>Cleanliness</option>
+      <option>Other</option>
+    </select>
+
+    <textarea id="message" placeholder="Complaint Details" rows="4" required></textarea>
+    <input type="file" id="image" accept="image/*">
+
+    <button type="submit">Submit Complaint</button>
+  </form>
+
+  <p id="status"></p>
 </main>
 
+<!-- WHATSAPP QR -->
+<div class="whatsapp-qr">
+  <div class="qr-title">
+    <i class="fab fa-whatsapp"></i>
+    Scan to Complaint on WhatsApp
+  </div>
+
+  <img src="https://drive.google.com/thumbnail?id=1pjRrMcTf5HXRtbyHZbfYzEywLTWElJCu&sz=w300"
+       alt="WhatsApp Complaint QR Code">
+</div>
+
+<!-- SCRIPT -->
 <script>
+function toggleMenu() {
+  const links = document.querySelectorAll('nav a');
+  links.forEach(link => link.classList.toggle('active'));
+}
+
 const API_URL = "https://script.google.com/macros/s/AKfycbya7KRQupcY_anV146gjtN0EeH6hQakjh20emQsgJqY0seA8MRV0vqst3zyE4zL2t6b/exec";
+
 document.getElementById("complaintForm").addEventListener("submit", async function(e) {
   e.preventDefault();
   const status = document.getElementById("status");
@@ -74,6 +227,7 @@ document.getElementById("complaintForm").addEventListener("submit", async functi
 
   const fileInput = document.getElementById("image");
   let imagePayload = {};
+
   if (fileInput.files.length > 0) {
     const file = fileInput.files[0];
     const base64 = await toBase64(file);
@@ -85,23 +239,21 @@ document.getElementById("complaintForm").addEventListener("submit", async functi
   }
 
   const payload = {
-    name: document.getElementById("name").value,
-    contact: document.getElementById("contact").value,
-    type: document.getElementById("type").value,
-    message: document.getElementById("message").value,
+    name: name.value,
+    contact: contact.value,
+    type: type.value,
+    message: message.value,
     ...imagePayload
   };
 
-  /* 🔴 CRITICAL FIX */
   fetch(API_URL, {
     method: "POST",
-    mode: "no-cors",   // ✅ REQUIRED
+    mode: "no-cors",
     body: JSON.stringify(payload)
   });
 
-  // ✅ Assume success (GAS does not allow response reading)
   status.innerText = "✅ Complaint submitted successfully";
-  document.getElementById("complaintForm").reset();
+  this.reset();
 });
 
 function toBase64(file) {
@@ -113,18 +265,6 @@ function toBase64(file) {
   });
 }
 </script>
-<!-- WhatsApp QR Complaint Section -->
-<div class="whatsapp-qr">
-  <div class="qr-title">
-    <i class="fab fa-whatsapp"></i>
-    Scan to Complaint on WhatsApp
-  </div>
-
-  <img 
-    src="https://drive.google.com/thumbnail?id=1pjRrMcTf5HXRtbyHZbfYzEywLTWElJCu&sz=w300"
-    alt="WhatsApp Complaint QR Code"
-  >
-</div>
 
 </body>
 </html>
