--- a/contactus.html
+++ b/contactus.html
@@ -4,11 +4,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Contact Us – Sukkur Division</title>
-<!-- Add this in <head> -->
+
+<!-- Font Awesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 <style>
-/* ================= HEADER ================= */
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -16,6 +16,7 @@ body {
   color: #333;
 }
 
+/* ===== HEADER ===== */
 .main-header {
   background-color: #2e7d32;
   color: white;
@@ -28,7 +29,6 @@ body {
 .header-left img,
 .header-right img {
   height: 50px;
-  width: auto;
 }
 
 .header-center {
@@ -44,7 +44,7 @@ body {
   text-align: center;
 }
 
-/* ================= NAVIGATION ================= */
+/* ===== NAV ===== */
 nav {
   background-color: rgba(0, 0, 50, 0.9);
   display: flex;
@@ -57,8 +57,6 @@ nav a {
   padding: 12px 20px;
   text-decoration: none;
   font-size: 16px;
-  text-align: center;
-  transition: background 0.3s;
 }
 
 nav a:hover {
@@ -72,16 +70,14 @@ nav button {
   color: white;
   font-size: 28px;
   cursor: pointer;
-  margin-left: 10px;
 }
 
-/* ================= MAIN CONTENT ================= */
+/* ===== MAIN ===== */
 main {
   max-width: 1000px;
   margin: 20px auto;
   padding: 20px;
   background: white;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
   border-radius: 8px;
 }
 
@@ -94,38 +90,51 @@ h2 {
 table {
   width: 100%;
   border-collapse: collapse;
-  margin-top: 10px;
 }
 
 th, td {
   border: 1px solid #ccc;
   padding: 12px;
   text-align: left;
-  vertical-align: top;
 }
 
 th {
   background-color: #e8f5e9;
 }
 
-tfoot td {
+/* ===== WHATSAPP QR ===== */
+.whatsapp-qr {
+  margin: 40px 0 20px;
+  text-align: center;
+}
+
+.qr-title {
+  font-size: 18px;
+  font-weight: bold;
+  color: #075e54;
+  margin-bottom: 12px;
+}
+
+.qr-title i {
+  margin-right: 8px;
+  font-size: 22px;
+}
+
+.whatsapp-qr img {
+  max-width: 220px;
+  width: 100%;
+}
+
+/* ===== FOOTER ===== */
+.footer-text {
   text-align: center;
   font-size: 14px;
   color: #555;
-  border: none;
-  padding: 15px 0 5px 0;
+  margin-top: 20px;
 }
 
-/* ================= RESPONSIVE ================= */
+/* ===== RESPONSIVE ===== */
 @media (max-width: 768px) {
-  main {
-    padding: 15px;
-  }
-
-  th, td {
-    padding: 8px;
-  }
-
   nav a {
     padding: 10px;
     font-size: 14px;
@@ -135,25 +144,25 @@ tfoot td {
     font-size: 18px;
   }
 }
-
 </style>
 </head>
+
 <body>
 
+<!-- HEADER -->
 <header class="main-header">
   <div class="header-left">
-    <img src="https://drive.google.com/thumbnail?id=1WptR4123r4Le2CahaXv9khTtmptZvHOn&sz=w80" alt="Pakistan Railways Logo">
+    <img src="https://drive.google.com/thumbnail?id=1WptR4123r4Le2CahaXv9khTtmptZvHOn&sz=w80">
   </div>
 
-  <div class="header-center">
-    Contact Us – Sukkur Division
-  </div>
+  <div class="header-center">Contact Us – Sukkur Division</div>
 
   <div class="header-right">
-    <img src="https://drive.google.com/thumbnail?id=1UD6SmPAI9x-y22oW4CIgrDaItR4MHttx&sz=w150" alt="Division Logo">
+    <img src="https://drive.google.com/thumbnail?id=1UD6SmPAI9x-y22oW4CIgrDaItR4MHttx&sz=w150">
   </div>
 </header>
 
+<!-- MENU -->
 <nav id="menu">
   <button onclick="toggleMenu()">☰ Menu</button>
   <a href="index.html">Home</a>
@@ -161,54 +170,71 @@ tfoot td {
   <a href="timing.html">Train Timing</a>
   <a href="ticketing.html">Ticketing</a>
   <a href="complaint.html">Register Complaint</a>
-  <a href="contactus.html">Contact Us</a>
+  <a href="contactus.html"><b>Contact Us</b></a>
 </nav>
 
 <main>
-  <h2>Contact Information</h2>
+<h2>Contact Information</h2>
 
-  <table>
-    <thead>
-      <tr>
-        <th>Title</th>
-        <th>Phone</th>
-        <th>Email/WhatsApp</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Divisional Superintendent Office, Sukkur</td>
-        <td>(071) 9310067</td>
-        <td>0314-0005834</td>
-      </tr>
-      <tr>
-        <td>Suggestion / Complaint</td>
-        <td>0314-0005834   </td>
-        <td><a href="https://wa.me/03140005834" target="_blank">
-    <i class="fab fa-whatsapp" style="font-size:24px; color:green;"></i>WhatsApp</a></td>
-      </tr>
-      <tr>
-        <td>E-Ticketing Support(IT/Server Room, Reservation Office Sukkur Station)</td>
-        <td>071-9310014</td>
-        <td>sukkurap@gmail.com</td>
-      </tr>
-    </tbody>
-    <tfoot>
-      <tr>
-        <td colspan="3">Copyright &copy; <span id="currentYear"></span> Divisional Superintendent, Pakistan Railways Sukkur</td>
-      </tr>
-    </tfoot>
-  </table>
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Phone</th>
+      <th>Email / WhatsApp</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Divisional Superintendent Office, Sukkur</td>
+      <td>(071) 9310067</td>
+      <td>0314-0005834</td>
+    </tr>
+    <tr>
+      <td>Suggestion / Complaint</td>
+      <td>0314-0005834</td>
+      <td>
+        <a href="https://wa.me/03140005834" target="_blank">
+          <i class="fab fa-whatsapp" style="font-size:22px;color:green;"></i>
+          WhatsApp
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <td>E-Ticketing Support (IT / Server Room, Sukkur)</td>
+      <td>071-9310014</td>
+      <td>sukkurap@gmail.com</td>
+    </tr>
+  </tbody>
+</table>
+
+<!-- WHATSAPP QR -->
+<div class="whatsapp-qr">
+  <div class="qr-title">
+    <i class="fab fa-whatsapp"></i>
+    Scan to Contact / Complaint on WhatsApp
+  </div>
+  <img src="https://drive.google.com/thumbnail?id=1pjRrMcTf5HXRtbyHZbfYzEywLTWElJCu&sz=w300"
+       alt="WhatsApp QR Code">
+</div>
+
+<!-- FOOTER TEXT -->
+<div class="footer-text">
+  Copyright &copy;
+  <span id="year"></span>
+  Divisional Superintendent, Pakistan Railways Sukkur
+</div>
+
 </main>
 
 <script>
 function toggleMenu() {
-  const links = document.querySelectorAll('nav a');
-  links.forEach(link => link.classList.toggle('active'));
+  document.querySelectorAll('nav a')
+    .forEach(a => a.classList.toggle('active'));
 }
 
-// Set current year in footer
-document.getElementById('currentYear').textContent = new Date().getFullYear();
+document.getElementById("year").innerText =
+  new Date().getFullYear();
 </script>
 
 </body>
