--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ function toggleMenu() {
   <div class="links-row">
     <a href="https://www.railways.gov.pk/" target="_blank">Ministry of Railways</a>
     <a href="https://web.citizenportal.gov.pk/" target="_blank">Pakistan Citizen Portal</a>
-    <a href="https://pakrail.gov.pk/Downloads.aspx" target="_blank">Downloads</a>
+    <a href="https://mohtasib.gov.pk/" target="_blank">Wafaqi Mohtasib</a>
   </div>
 </div>
 <!-- FOOTER -->
