--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@ main {
   <a href="ticketing.html">Ticketing</a>
   <a href="complaint.html"><b>Register Complaint</a></b>
    <a href="contactus.html">Contact Us</a>
+   <a href="gallery.html">Gallery</a>
 </nav>
 
 <main>
