--- a/ticketing.html
+++ b/ticketing.html
@@ -168,7 +168,7 @@
   </div>
 
   <div class="text-section">
-    The Sukkur Division operates <strong>27 stations</strong>, providing <strong>24/7 ticketing and reservation services</strong>. Ticket Vending Machines (TVMs) are installed at <strong>Rohri and Rahimyar Khan</strong>, offering convenient reservation options.
+    The Sukkur Division operates <strong>27 POS stations</strong>, providing <strong>24/7 ticketing and reservation services</strong>. Ticket Vending Machines (TVMs) are installed at <strong>Rohri and Rahimyar Khan</strong>, offering convenient reservation options.
     <p>All main line stations, as well as major branch line stations, are equipped for <strong>computerized ticketing</strong>, and work is underway to extend this facility to the remaining branch line stations.</p>
 
     <p>Passengers can also make reservations through the <strong>RABTA mobile app</strong> and the <strong>Pakistan Railways website</strong>, ensuring flexibility and convenience.</p>
