--- a/tracking.html
+++ b/tracking.html
@@ -113,7 +113,7 @@ footer {
 </footer>
 
 <script>
-const API_URL = "YOUR_WEB_APP_URL?action=liveTrains";
+const API_URL = "https://script.google.com/macros/s/AKfycbya7KRQupcY_anV146gjtN0EeH6hQakjh20emQsgJqY0seA8MRV0vqst3zyE4zL2t6b/exec?action=liveTrains";
 let trains = [];
 
 // Load trains on page load
