--- a/index.html
+++ b/index.html
@@ -194,8 +194,7 @@ main {
 .footer {
   background: #003366;
   color: white;
-  text-align: center;
-  padding: 12px 5px;
+  padding: 12px 10px;
   font-size: 14px;
 }
 
@@ -206,6 +205,17 @@ main {
     font-size: 14px;
   }
 }
+/* FOOTER LAYOUT FIX */
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.visitor-counter {
+  text-align: left;
+}
+
 </style>
 
 </style>
