--- a/complaint.html
+++ b/complaint.html
@@ -185,7 +185,7 @@ button:hover {
     <select id="type" required>
       <option value="">Select Complaint Type</option>
       <option>Station Facilities</option>
-      <option>Train Delay</option>
+      <option>Ticketing</option>
       <option>Staff Behaviour</option>
       <option>Cleanliness</option>
       <option>Other</option>
