--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ main {
   <a href="complaint.html"><b>Register Complaint</a></b>
    <a href="contactus.html">Contact Us</a>
    <a href="gallery.html">Gallery</a>
-  <a href="tracking.html" class="blink-tracking">Train Tracking</a>
+  <a href="tracking1.html" class="blink-tracking">Train Tracking</a>
 
 </nav>
 
