--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ function toggleMenu() {
 
     <!-- CENTER : TRAIN TRACKING LINK -->
     <div style="text-align:center;">
-      <a href="tracking.html" class="footer-track">
+      <a href="tracking1.html" class="footer-track">
         🚆 Train Tracking
       </a>
     </div>
