--- a/stations.html
+++ b/stations.html
@@ -56,6 +56,19 @@ ul {
 li {
   margin-bottom: 4px;
 }
+  /* ===== Blinking Train Tracking menu ===== */
+.blink-tracking {
+  color: yellow !important;
+  font-weight: bold;
+  animation: blinkText 1s infinite;
+}
+
+@keyframes blinkText {
+  0%   { opacity: 1; }
+  50%  { opacity: 0; }
+  100% { opacity: 1; }
+}
+
 </style>
 </head>
 
