--- a/ticketing.html
+++ b/ticketing.html
@@ -142,6 +142,19 @@
     flex-direction: column;
   }
 }
+/* ===== Blinking Train Tracking menu ===== */
+.blink-tracking {
+  color: yellow !important;
+  font-weight: bold;
+  animation: blinkText 1s infinite;
+}
+
+@keyframes blinkText {
+  0%   { opacity: 1; }
+  50%  { opacity: 0; }
+  100% { opacity: 1; }
+}
+
 </style>
 </head>
 <body>
