--- a/stations.html
+++ b/stations.html
@@ -83,6 +83,7 @@ li {
   <a href="ticketing.html">Ticketing</a>
   <a href="complaint.html">Register Complaint</a>
   <a href="contactus.html">Contact Us</a>
+  <a href="tracking1.html" class="blink-tracking">Train Tracking</a>
 </nav>
 
 <main style="padding:20px;">
