--- a/ticketing.html
+++ b/ticketing.html
@@ -168,6 +168,7 @@
   <a href="ticketing.html">Ticketing</a>
   <a href="complaint.html">Register Complaint</a>
   <a href="contactus.html">Contact Us</a>
+  <a href="tracking1.html" class="blink-tracking">Train Tracking</a>
 </nav>
 
 <div class="container">
