--- a/timing.html
+++ b/timing.html
@@ -167,6 +167,7 @@ th {
   <a href="ticketing.html">Ticketing</a>
   <a href="complaint.html">Register Complaint</a>
   <a href="contactus.html">Contact Us</a>
+  <a href="tracking1.html" class="blink-tracking">Train Tracking</a>
 </nav>
 
 <!-- SEARCH PANEL -->
