--- a/timing.html
+++ b/timing.html
@@ -150,6 +150,18 @@ th {
   scrollbar-width: auto;
   scrollbar-color: #888 #f1f1f1;
 }
+/* ===== Blinking Train Tracking menu ===== */
+.blink-tracking {
+  color: yellow !important;
+  font-weight: bold;
+  animation: blinkText 1s infinite;
+}
+
+@keyframes blinkText {
+  0%   { opacity: 1; }
+  50%  { opacity: 0; }
+  100% { opacity: 1; }
+}
 
 </style>
 </head>
