--- a/tracking.html
+++ b/tracking.html
@@ -2,76 +2,121 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Pakistan Railways – Sukkur Division | Live Train Tracking</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Train Tracking – Sukkur Division</title>
 
 <style>
-body {
-  font-family: Arial, sans-serif;
-  background: #f4f6f8;
-  margin: 0;
-}
-
-header {
-  background: #2e7d32;
+/* ================= HEADER ================= */
+.main-header {
+  background-color: #2e7d32;
   color: white;
-  padding: 15px;
-  text-align: center;
-}
-
-.container {
-  max-width: 1000px;
-  margin: 30px auto;
-  background: white;
-  padding: 20px;
-  border-radius: 6px;
-}
-
-.search-bar {
+  padding: 5px 10px;
   display: flex;
-  gap: 10px;
-  margin-bottom: 20px;
+  align-items: center;
+  justify-content: space-between;
 }
 
-select, button {
-  padding: 10px;
-  font-size: 15px;
+.header-left img,
+.header-right img {
+  height: 50px;
 }
 
-select {
+.header-center {
+  font-size: 22px;
+  font-weight: bold;
+  text-align: center;
   flex: 1;
 }
 
-button {
-  background: #2e7d32;
+.header-left,
+.header-right {
+  width: 60px;
+  text-align: center;
+}
+
+/* ================= NAV ================= */
+nav {
+  background-color: rgba(0, 0, 50, 0.9);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+nav a {
   color: white;
-  border: none;
-  cursor: pointer;
+  padding: 12px 20px;
+  text-decoration: none;
+  font-size: 16px;
 }
 
-button:hover {
-  background: #256628;
+nav a:hover {
+  background-color: #1a237e;
 }
 
-table {
-  width: 100%;
-  border-collapse: collapse;
+/* BLINKING MENU */
+.blink-tracking {
+  color: yellow !important;
+  font-weight: bold;
+  animation: blinkText 1s infinite;
 }
 
-th, td {
-  border: 1px solid #ccc;
-  padding: 10px;
+@keyframes blinkText {
+  0% { opacity: 1; }
+  50% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+/* ================= BODY ================= */
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: linear-gradient(to bottom, #e8f5e9, #ffffff);
+}
+
+/* CENTER CONTENT */
+.container {
   text-align: center;
+  padding: 60px 20px;
 }
 
-th {
-  background: #e8f5e9;
+.container h1 {
+  color: #2e7d32;
+  font-size: 32px;
 }
 
-footer {
-  text-align: center;
-  padding: 10px;
-  font-size: 13px;
+.container p {
+  font-size: 18px;
+  margin-bottom: 30px;
+}
+
+/* TRACK */
+.track {
+  position: relative;
+  width: 320px;
+  height: 6px;
+  background: #555;
+  margin: 0 auto;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+/* TRAIN */
+.train {
+  position: absolute;
+  top: -14px;
+  left: -60px;
+  font-size: 30px;
+  animation: moveTrain 4s linear infinite;
+}
+
+@keyframes moveTrain {
+  0% { left: -60px; }
+  100% { left: 340px; }
+}
+
+.note {
+  margin-top: 25px;
+  font-size: 14px;
   color: #555;
 }
 </style>
@@ -79,92 +124,47 @@ footer {
 
 <body>
 
-<header>
-  <h2>Pakistan Railways – Sukkur Division</h2>
-  <p>Live Train Tracking System</p>
-</header>
-
-<div class="container">
-
-  <div class="search-bar">
-    <select id="trainSelect">
-      <option value="">Loading trains...</option>
-    </select>
-
-    <button onclick="searchTrain()">Search</button>
+<!-- HEADER -->
+<header class="main-header">
+  <div class="header-left">
+    <img src="https://drive.google.com/thumbnail?id=1WptR4123r4Le2CahaXv9khTtmptZvHOn&sz=w80">
   </div>
 
-  <table id="resultTable" style="display:none;">
-    <thead>
-      <tr>
-        <th>Train</th>
-        <th>Live Status</th>
-        <th>Next Station</th>
-        <th>Remarks</th>
-      </tr>
-    </thead>
-    <tbody id="resultBody"></tbody>
-  </table>
+  <div class="header-center">
+    Pakistan Railways – Sukkur Division
+  </div>
 
+  <div class="header-right">
+    <img src="https://drive.google.com/thumbnail?id=1UD6SmPAI9x-y22oW4CIgrDaItR4MHttx&sz=w150">
+  </div>
+</header>
+
+<!-- MENU -->
+<nav>
+  <a href="index.html">Home</a>
+  <a href="stations.html">Stations</a>
+  <a href="timing.html">Train Timing</a>
+  <a href="ticketing.html">Ticketing</a>
+  <a href="complaint.html">Register Complaint</a>
+  <a href="contactus.html">Contact Us</a>
+  <a href="gallery.html">Gallery</a>
+  <a href="tracking.html" class="blink-tracking">Train Tracking</a>
+</nav>
+
+<!-- CONTENT -->
+<div class="container">
+  <h1>🚆 Train Tracking</h1>
+  <p><strong>Under Construction</strong></p>
+
+  <div class="track">
+    <div class="train">🚆</div>
+  </div>
+
+  <div class="note">
+    Live train tracking facility will be available soon.<br>
+    Pakistan Railways – Sukkur Division
+  </div>
 </div>
-
-<footer>
-  © Pakistan Railways – Sukkur Division
-</footer>
-
-<script>
-const API_URL = "https://script.google.com/macros/s/AKfycbya7KRQupcY_anV146gjtN0EeH6hQakjh20emQsgJqY0seA8MRV0vqst3zyE4zL2t6b/exec?action=liveTrains";
-let trains = [];
-
-// Load trains on page load
-fetch(API_URL)
-  .then(res => res.json())
-  .then(data => {
-    if (!data.IsSuccess) return;
-
-    trains = data.Response;
-    const select = document.getElementById("trainSelect");
-    select.innerHTML = '<option value="">Select Train</option>';
-
-    trains.forEach(t => {
-      const opt = document.createElement("option");
-      opt.value = t.TrainId;
-      opt.textContent = t.TrainName;
-      select.appendChild(opt);
-    });
-  })
-  .catch(err => {
-    console.error(err);
-    document.getElementById("trainSelect").innerHTML =
-      '<option>Error loading trains</option>';
-  });
-
-function searchTrain() {
-  const trainId = document.getElementById("trainSelect").value;
-  if (!trainId) {
-    alert("Please select a train");
-    return;
-  }
-
-  const train = trains.find(t => t.TrainId == trainId);
-  if (!train) return;
-
-  const tbody = document.getElementById("resultBody");
-  tbody.innerHTML = "";
-
-  const row = `
-    <tr>
-      <td>${train.TrainName}</td>
-      <td>${train.IsLive ? "Live" : "Not Live"}</td>
-      <td>${train.NextStation || "N/A"}</td>
-      <td>${train.Remarks || "On Time"}</td>
-    </tr>
-  `;
-
-  tbody.innerHTML = row;
-  document.getElementById("resultTable").style.display = "table";
-}
-</script>
 
 </body>
 </html>
