--- a/liveTest.html
+++ b/liveTest.html
@@ -6,7 +6,7 @@
   <title>Pakistan Railways Live Train Status</title>
 </head>
 <body>
-  <h2>Pakistan Railways Live Train Status</h2>
+  <h2>Pak Railways Live Train Status</h2>
   <label for="trainId">Enter Train ID:</label>
   <input type="text" id="trainId" value="41" />
   <button id="startBtn">Start Tracking</button>
